--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,6 +8,8 @@ body {
 
 header {
 	background: #F44336;
+	margin-bottom: 16px;
+	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.35);
 }
 
 form {
@@ -29,8 +31,8 @@ form input[type=text] {
 }
 
 form input[type=text]:focus {
-	border-bottom: 3px solid #00E676;
-	outline: none;
+	border-bottom: 3px solid #1DE9B6;
+	outline: 0;
 }
 
 ::-webkit-input-placeholder {
@@ -43,8 +45,12 @@ form input[type=submit] {
 	color: #fff;
 }
 
+form input[type=submit]:active {
+	outline: 0;
+}
+
 form input[type=submit]:hover {
-	background: #1DE9B6;
+	background: #D32F2F;
 }
 
 #videoWrapper {
@@ -52,6 +58,7 @@ form input[type=submit]:hover {
 	padding-bottom: 56.25%; /* 16:9 */
 	padding-top: 25px;
 	height: 0;
+	margin-bottom: 15px;
 }
 
 #videoWrapper iframe {
@@ -60,4 +67,9 @@ form input[type=submit]:hover {
 	left: 0;
 	width: 100%;
 	height: 100%;
+}
+
+footer {
+	text-align: center;
+	color: #727272;
 }
