--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -53,6 +53,14 @@ form input[type=submit]:hover {
 	background: #D32F2F;
 }
 
+#error {
+	font-size: 24px;
+	font-weight: 700;
+	text-align: center;
+	text-transform: uppercase;
+	margin-bottom: 15px;
+}
+
 #videoWrapper {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
@@ -69,7 +77,38 @@ form input[type=submit]:hover {
 	height: 100%;
 }
 
+#floatingAction {
+	background: #1DE9B6;
+	border-radius: 50%;
+	position: absolute;
+	bottom: 0;
+	left: 5%;
+	transform: translate(0, 50%);
+	width: 56px;
+	height: 56px;
+}
+
+#floatingAction:hover {
+	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.35);
+	cursor: pointer;
+}
+
+#floatingAction img {
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
 footer {
 	text-align: center;
 	color: #727272;
+}
+
+footer a {
+	color: #1DE9B6;
+}
+
+footer a:hover {
+	color: #00BFA5;
 }
